@@ -2,10 +2,12 @@ AUX 0.1.12-fbsd.patch 2477 RMD160 aa92a57100c98cf1ef900d1f27685a33a9c3fc91 SHA1 
 AUX libusb-0.1.12-no-infinite-bulk.patch 807 RMD160 bba6194bb6cc9c0008791684c325c599ea6a2415 SHA1 92b97b247baa0e548f1909addf69bb159534a991 SHA256 141b8a6f6e4cef3b9e08377cb1d79cb9398f2437894d368d0eca8f1c07848db7
 AUX libusb-0.1.12-nocpp.patch 572 RMD160 cdceb6a5550a6371401046fb26a9ccc67e4a3d5d SHA1 c55022ae4965b469949329cd6839707790a44ec4 SHA256 6a9833ea9238b9df0f6a359c3d84f829bdf83e26dedb31ce9d614f9c6cda3ab0
 DIST libusb-0.1.12.tar.gz 389343 RMD160 63848df717e00fff67ab30ba86a85466370d4e8e SHA1 599a5168590f66bc6f1f9a299579fd8500614807 SHA256 37f6f7d9de74196eb5fc0bbe0aea9b5c939de7f500acba3af6fd643f3b538b44
+DIST libusb-1.0.1.tar.bz2 310554 RMD160 4ecc8262add54e5ba9defd6cd5d5819b60e38e10 SHA1 915d5a3538a6182d2eda845f91934c1ad718f19e SHA256 510b9c7339e878324066ec1cb74c0f67d5df858065155a3239999ff911257d45
 EBUILD libusb-0.1.12-r1.ebuild 1774 RMD160 519d28945f994e78d806e1f6a32d7910fb0c55cb SHA1 185c16d6343053c3c7ca46518f47ab4fe3fccd6c SHA256 4bfa61b47763251a2aa5aa6066d033389286ffc4f9eb27966433e1872f939acc
 EBUILD libusb-0.1.12-r2.ebuild 1820 RMD160 d0dfe12f12d02717fce68c15e05065fbe9e37c01 SHA1 44b02a0487544e3e2c9cf2c975a98932a7d2ad8c SHA256 3873bfc5a7baf8077f586580da03d55ff4582de94b177ba8a693b2d6149c5127
 EBUILD libusb-0.1.12-r3.ebuild 1905 RMD160 b0d5d61e990e567221fa2b138598baf3cc54e485 SHA1 10c41d9830732e29aff5a40fe0750e37d906c551 SHA256 35adafd7b6a76dcea3619a18dca5541ba87ecea24874faa1992f3e68b2374bae
 EBUILD libusb-0.1.12-r4.ebuild 1962 RMD160 9b70e8f772a78bda41e2d4b4a4fb53f68da6479b SHA1 9ab531ddf99f9c58129f5488dfbdd755c315a15c SHA256 9f26ec186fe27d9d42e9a9345447553627607fa0d54968463d8444277433caa2
 EBUILD libusb-0.1.12-r5.ebuild 1650 RMD160 7940b4bed23d606f1d7f772b2a1a130e7874da11 SHA1 6fd0f19fb88c502ff4cc98160e7cf00292bd1cf4 SHA256 ebfc45dc74b4d33c7271afb87d2c0e781cdc633be129cb37b2084c573a052440
-MISC ChangeLog 10410 RMD160 db0523d6b7b418afbcd0ae60aef621eb85bd0231 SHA1 5e7824fec7b75ca043ecbf7fa0e94b2c8ebe2aee SHA256 0072d7a6e4387ee102231d36d986a569b34f8994c806ac8da1f388b789bf2137
+EBUILD libusb-1.0.1.ebuild 922 RMD160 e51d93128cf7b14146f89a75e352a49df351fe9e SHA1 83ded359ac666249305953841640e271ac583904 SHA256 00ca755f4306bed52b8de1ea54da8e7cd2b4a9ae9c9a13b929ed42efa67315a4
+MISC ChangeLog 10649 RMD160 757144adc960ccffcfdaf142860c808a52582a4e SHA1 4e5da1f29019ecdf7298ba1f53b6a9fdee4fad08 SHA256 f54deaa195c23820e6906c4036ccfc5a3b18f36ba066822935d075a6c372877d
 MISC metadata.xml 226 RMD160 648b1f4c4f30d91596a8bb5ee6713abbe558d1ee SHA1 454eb537623437bf8d58ae3cd0418e6a898bac61 SHA256 32bd7ea3d52eaade1cad03a261cd0f75ae3b0d10787fe646ece11c752b1cdfd2
