@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libusb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.83 2009/03/28 11:30:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb/ChangeLog,v 1.84 2009/05/14 23:28:09 robbat2 Exp $
+
+*libusb-1.0.1 (14 May 2009)
+
+  14 May 2009; Robin H. Johnson <robbat2@gentoo.org> +libusb-1.0.1.ebuild:
+  Bug #247687: version bump to v1 series. Be sure to see the new libusb
+  virtuals. Ebuild by Tiziano Müller <dev-zero@gentoo.org>.
 
   28 Mar 2009; Mike Frysinger <vapier@gentoo.org> libusb-0.1.12-r5.ebuild:
   Dont move the C++ lib to /lib #245645 by DarkNRG.
